assets/style.css
ul {
    direction: rtl;
}

body {
    background: url('images/Background.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.page-content {
    border: 2px solid black;
    margin-top: 50px;
    background-color: white;
}

.page-content-header{
    margin: 0px;
    border-bottom: 2px solid darkgray;
    padding: 10px;
}

.page-content-body{
    padding: 30px;
}

.about-me-img{
    width: 450px;
    height: 300px;
    margin-right: 10px;
}

.portfolio-row{
    margin-bottom: 25px;
}

.portfolio-img{
    width: 350px;
    height: 350px;
}

